--- a/2020-10-25.Rmd
+++ b/2020-10-25.Rmd
@@ -36,3 +36,42 @@ purl("2020-10-25.Rmd")
 16 -> chou
 ```
 
+# Review R Basic (II)
+```{r}
+2
+4
+```
+```{r}
+my_108_total_credits <- 15
+`_108_total_credits` <- 15
+108_total_credits <- 15
+_my_108_total_credits <- 15
+my.108.total_credits <- 15
+.108.total_credits <- 15 # 隱藏變數
+.my.108.total_credits <- 15
+我的108學年總學分數 <- 15
+`我的108學年總學分數` <- 15 # 特殊名稱處理，`不是名稱的一部份
+`.108.total_credits` <- 15
+```
+
+```{r}
+a <- 15 # 變數設定
+b <- a
+# 呼叫a的值，用來設定變數b的值，相當於 b <- 15
+# 把a指定給b
+c <- y
+#未創造出y
+```
+
+```{r}
+a <- 6
+# b不會跟著改變 沒有綁在一起
+```
+
+```{r}
+sum(c(a,b))
+```
+```{r}
+a+b
+```
+
