--- a/2020-10-25.Rmd
+++ b/2020-10-25.Rmd
@@ -133,3 +133,64 @@ c(T,TRUE,F,FALSE)
 c(T,T,F,F)
 ```
 
+# Review R Basics(IV)Character
+```{r}
+num1<-5 # 非整數
+num2<-5L # 整數
+
+num1Vector<-c(5,6,7)
+num2Vector<-c(5L,6L,7L)
+```
+
+```{r}
+typeof(num1)
+typeof(num2)
+```
+
+
+```{r}
+object.size(num1)
+object.size(num2)
+```
+
+```{r}
+object.size(num1Vector)
+object.size(num2Vector)
+```
+
+```{r}
+char1Vector<-c("你好","How are you?")
+```
+
+```{r}
+typeof(char1Vector)
+class(char1Vector)
+```
+
+```{r}
+dialogue <- c(
+  '小明說："明天不用上課。"',
+  '小花說："真的嗎？"'
+)
+
+dialogue # 顯示原始值的內容（含輸入時的引號）
+cat(dialogue, sep="\n") # 顯示給人類看（含存出來）的值，sep="\n", 不同元素換行陳列。
+writeLines(dialogue, "conversation.txt") # cat顯示的正是存出來樣貌。
+```
+
+```{r}
+d1 <- c("小明說：","明天不用上課。")
+d1
+```
+```{r}
+d2 <- '小明說："明天不用上課。"'
+d2
+```
+```{r}
+context <- "老師說換行要寫\\n" # 請依下列情境輸入
+cat(context)
+```
+```{r}
+
+```
+
