--- a/2020-11-21.Rmd
+++ b/2020-11-21.Rmd
@@ -132,3 +132,112 @@ oneOrder$order[newOrders] <- list(
 )
 ```
 
+```{r}
+library(lubridate)
+LL0 <- LL <- list(
+  "Mary was born on", 
+  ymd("1995-7-1"),
+  "John was born on",
+  ymd("1997-10-27")
+  )
+LL[[2]]
+```
+
+```{r}
+LL[[2]] <- ymd("1995-7-8")
+print(LL)
+```
+
+```{r}
+oneorder$order[[1]]$quantity
+oneorder$order[[1]]$quantity <- 2
+oneorder
+```
+
+```{r}
+LL[c(2,4)] <- list( ymd("1995-7-8"),ymd("1997-10-17")
+)
+print(LL)
+```
+
+```{r}
+class(LL)
+```
+
+```{r}
+oneOrder <- oneorder
+```
+
+```{r}
+anotherOrder <- 
+  list(
+    restaurant="古橋飲食店",
+    date=lubridate::mdy("Nov 9, 2020"),
+    order=list(
+      list(
+        item="古早味排骨飯",
+        quantity=1
+      )
+    ),
+    total=89
+  )
+thirdOrder <-
+  list(
+    restaurant="Tijo Kitchen",
+    date=lubridate::mdy("Nov 8, 2020"),
+    order=list(
+      list(
+        item="韓式泡菜黑咖哩飯",
+        quantity=1
+      )
+    )
+  )
+```
+
+
+```{r}
+allMyOrder <- 
+  list(
+    oneOrder,
+    anotherOther,
+    thirdOrder
+  )
+```
+
+```{r}
+allMyOrder = 
+  list(
+    oneOrder
+  )
+allMyOrder[c(2.3)] <- list(anotherOrder,thirdOrder)
+allMyOrder
+```
+
+```{r}
+a <- c("L", "K", "Z")
+a <- a[-c(2)]
+print(a)
+```
+
+```{r}
+LL <- list('a', T, 183)
+LL[c(1,3)] <- NULL 
+print(LL) 
+```
+
+```{r}
+a0 <- a <- c(John=178, Mary=170, Hanson=180)
+names(a)
+
+names(a) <- c("John", "Kate", "Hason")
+names(a)
+
+a <- a0
+names(a)[[2]] <- "May"
+names(a)
+```
+
+```{r}
+?names
+```
+
