--- a/2020-12-16.Rmd
+++ b/2020-12-16.Rmd
@@ -78,3 +78,167 @@ ages_fct3[[3]] > ages_fct3[[6]]
 ages_fct3[[6]] < "11-15" # 也可以用文字寫下levels中有的分類
 ```
 
+### review 4.7.2 4.7.3
+
+```{r}
+old_fct <- 
+  factor(c("4以下","5-10","11-15"))
+levels(old_fct) # 依序下的各類別名稱
+```
+
+```{r}
+levels(old_fct) <- c("青少年", "幼兒", "兒童")
+levels(old_fct)
+old_fct
+```
+
+```{r}
+set.seed(2018)
+gender <- 
+  sample(c("M","F"),10000,replace=T)
+head(gender)
+```
+
+```{r}
+gender_fct <- factor(gender)
+levels(gender_fct)
+```
+
+```{r}
+levels(gender_fct) <- c("女","男")
+head(gender_fct)
+```
+
+```{r}
+a <- c(178,172)
+names(a)
+names(a) <- c("John","Mary")
+a
+a[["John"]]
+```
+
+```{r}
+old_fct2 <- 
+  factor(c("4以下","5-10","11-15", "5-10"))
+levels(old_fct2)
+levels(old_fct2) <- c("4以下","5-10","11-15")
+old_fct2
+```
+
+```{r}
+levels(old_fct2,
+       levels = c("4以下","5-10","11-15"))
+```
+
+```{r}
+set.seed(2020)
+ages_chr <- sample(c("4以下","5-9","10-14", "15-19"), 20, replace=T)
+ages_chr
+```
+
+```{r}
+ages_fctBy5 <- 
+  factor(
+    ages_chr,
+    levels = c("4以下","5-9","10-14", "15-19")
+  )
+
+levels(ages_fctBy5)
+table(ages_fctBy5)
+```
+
+```{r}
+levels(ages_fctBy5) <- c("10以下", "10以下", "10以上", "10以上")
+table(ages_fctBy5)
+```
+
+```{r}
+set.seed(2020)
+ages_chr <- sample(c("4以下","5-9","10-14", "15-19"), 10, replace=T)
+ages_chr
+```
+
+```{r}
+data_fct <- factor(ages_chr)
+length(data_fct)
+```
+
+```{r}
+data_fct[[11]] <- c("10-14")
+data_fct
+data_fct[c(12, 13)] <- c("5-9","15-19")
+data_fct
+```
+
+```{r}
+levels(data_fct) 
+data_fct[[14]] <- "20-24"
+data_fct[[14]]
+data_fct
+```
+
+```{r}
+levels(data_fct)
+```
+
+```{r}
+levels(data_fct)[[5]] <- "20-24"
+levels(data_fct)
+data_fct[[14]] <- "20-24"
+data_fct
+```
+
+```{r}
+# 非類別資料
+numVect <- c(2, 5, 7)
+# 新增c(6, 10)
+numVect <- c(numVect, c(6,10))
+numVect
+```
+
+```{r}
+# 類別資料
+fctVector1 <- factor(c("a","b", "c", "a"))
+attributes(fctVector1)
+
+fctVector1_c <- c(fctVector1)
+attributes(fctVector1_c)
+```
+
+
+```{r}
+fctVector2 <- factor(c("a","c"))
+c(fctVector1,fctVector2)
+
+# 新增 'a', 'c'
+fctVector
+fctVector <- c(fctVector, c('a','c'))
+fctVector
+```
+
+```{r}
+a <- c(Mary=178, Jack=165)
+attr(a, "family") <- "Johnson"
+attributes(a)
+
+b <- c(Ben=170, David=172)
+attr(b, "family") <- "Jenson"
+attributes(b)
+
+a_b <- c(a, b)
+attributes(a_b)
+```
+
+```{r}
+fct_a <- factor(c('a','d','e'))
+levels(fct_a)
+fct_b <- factor(c("a","e","j"))
+levels(fct_b)
+list_ab <- 
+  list(fct_a, fct_b)
+list_ab
+
+unlist(list_ab) -> fct_ab
+fct_ab
+```
+
